// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelMembers should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="AdminPanel clearfix "
        id="channelMembers"
      >
        <div
          class="header"
        >
          <div>
            <h3>
              Members
            </h3>
            <div
              class="mt-2"
            >
              A list of users who are currently in the channel right now
            </div>
          </div>
          <div
            class="button"
          >
            <button
              class="style--none btn btn-primary"
              id="addChannelMembers"
            >
              Add Members
            </button>
          </div>
        </div>
        <div
          class="DataGrid"
        >
          <div
            class="DataGrid_search"
          >
            <div
              class="DataGrid_searchBar"
            >
              <span
                aria-hidden="true"
                class="DataGrid_searchIcon"
              >
                <i
                  class="fa fa-search"
                  title="Search Icon"
                />
              </span>
              <input
                data-testid="searchInput"
                placeholder="Search"
                type="text"
                value=""
              />
              <i
                class="DataGrid_clearButton fa fa-times-circle hidden"
                data-testid="clear-search"
              />
            </div>
            <div
              class="Filter"
            >
              <button
                class="Filter_button"
                type="button"
              >
                <i
                  class="Icon icon-filter-variant"
                />
                Filters
              </button>
              <div
                class="Filter_content"
              >
                <div
                  class="Filter_header"
                >
                  <div
                    class="Filter_title"
                  >
                    Filter by
                  </div>
                  <a
                    class="Filter_reset"
                  >
                    Reset filters
                  </a>
                </div>
                <hr />
                <div
                  class="Filter_lists"
                >
                  <div
                    class="FilterList"
                  >
                    <div
                      class="FilterList_name"
                    >
                      Role
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="system_guest"
                            name="system_guest"
                            type="checkbox"
                          />
                          Guest
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="channel_user"
                            name="channel_user"
                            type="checkbox"
                          />
                          Member
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="channel_admin"
                            name="channel_admin"
                            type="checkbox"
                          />
                          Channel Admin
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="system_admin"
                            name="system_admin"
                            type="checkbox"
                          />
                          System Admin
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="Filter_apply style--none btn btn-primary"
                  disabled=""
                  type="button"
                >
                  Apply
                </button>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_header"
          >
            <div
              class="DataGrid_cell"
              style="flex-grow: 3;"
            >
              Name
            </div>
            <div
              class="DataGrid_cell"
            />
            <div
              class="DataGrid_cell"
            />
          </div>
          <div
            class="DataGrid_rows"
            style="min-height: 240px;"
          >
            <div
              class="DataGrid_loading"
            >
              <span
                class="LoadingSpinner"
                id="loadingSpinner"
              >
                <span
                  class="fa fa-spinner fa-fw fa-pulse spinner"
                  title="Loading Icon"
                />
              </span>
              Loading
            </div>
          </div>
          <div
            class="DataGrid_footer"
          >
            <div
              class="DataGrid_cell"
            >
              1 - 3 of 3
              <button
                class="btn btn-link prev disabled"
                disabled=""
                type="button"
              >
                <i
                  class="fa fa-1x fa-angle-left"
                  title="Previous Icon"
                />
              </button>
              <button
                class="btn btn-link next disabled"
                disabled=""
                type="button"
              >
                <i
                  class="fa fa-1x fa-angle-right"
                  title="Next Icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="AdminPanel clearfix "
      id="channelMembers"
    >
      <div
        class="header"
      >
        <div>
          <h3>
            Members
          </h3>
          <div
            class="mt-2"
          >
            A list of users who are currently in the channel right now
          </div>
        </div>
        <div
          class="button"
        >
          <button
            class="style--none btn btn-primary"
            id="addChannelMembers"
          >
            Add Members
          </button>
        </div>
      </div>
      <div
        class="DataGrid"
      >
        <div
          class="DataGrid_search"
        >
          <div
            class="DataGrid_searchBar"
          >
            <span
              aria-hidden="true"
              class="DataGrid_searchIcon"
            >
              <i
                class="fa fa-search"
                title="Search Icon"
              />
            </span>
            <input
              data-testid="searchInput"
              placeholder="Search"
              type="text"
              value=""
            />
            <i
              class="DataGrid_clearButton fa fa-times-circle hidden"
              data-testid="clear-search"
            />
          </div>
          <div
            class="Filter"
          >
            <button
              class="Filter_button"
              type="button"
            >
              <i
                class="Icon icon-filter-variant"
              />
              Filters
            </button>
            <div
              class="Filter_content"
            >
              <div
                class="Filter_header"
              >
                <div
                  class="Filter_title"
                >
                  Filter by
                </div>
                <a
                  class="Filter_reset"
                >
                  Reset filters
                </a>
              </div>
              <hr />
              <div
                class="Filter_lists"
              >
                <div
                  class="FilterList"
                >
                  <div
                    class="FilterList_name"
                  >
                    Role
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="system_guest"
                          name="system_guest"
                          type="checkbox"
                        />
                        Guest
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="channel_user"
                          name="channel_user"
                          type="checkbox"
                        />
                        Member
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="channel_admin"
                          name="channel_admin"
                          type="checkbox"
                        />
                        Channel Admin
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="system_admin"
                          name="system_admin"
                          type="checkbox"
                        />
                        System Admin
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="Filter_apply style--none btn btn-primary"
                disabled=""
                type="button"
              >
                Apply
              </button>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_header"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 3;"
          >
            Name
          </div>
          <div
            class="DataGrid_cell"
          />
          <div
            class="DataGrid_cell"
          />
        </div>
        <div
          class="DataGrid_rows"
          style="min-height: 240px;"
        >
          <div
            class="DataGrid_loading"
          >
            <span
              class="LoadingSpinner"
              id="loadingSpinner"
            >
              <span
                class="fa fa-spinner fa-fw fa-pulse spinner"
                title="Loading Icon"
              />
            </span>
            Loading
          </div>
        </div>
        <div
          class="DataGrid_footer"
        >
          <div
            class="DataGrid_cell"
          >
            1 - 3 of 3
            <button
              class="btn btn-link prev disabled"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-1x fa-angle-left"
                title="Previous Icon"
              />
            </button>
            <button
              class="btn btn-link next disabled"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-1x fa-angle-right"
                title="Next Icon"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin_console/team_channel_settings/channel/ChannelMembers should match snapshot loading no users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="AdminPanel clearfix "
        id="channelMembers"
      >
        <div
          class="header"
        >
          <div>
            <h3>
              Members
            </h3>
            <div
              class="mt-2"
            >
              A list of users who are currently in the channel right now
            </div>
          </div>
          <div
            class="button"
          >
            <button
              class="style--none btn btn-primary"
              id="addChannelMembers"
            >
              Add Members
            </button>
          </div>
        </div>
        <div
          class="DataGrid"
        >
          <div
            class="DataGrid_search"
          >
            <div
              class="DataGrid_searchBar"
            >
              <span
                aria-hidden="true"
                class="DataGrid_searchIcon"
              >
                <i
                  class="fa fa-search"
                  title="Search Icon"
                />
              </span>
              <input
                data-testid="searchInput"
                placeholder="Search"
                type="text"
                value=""
              />
              <i
                class="DataGrid_clearButton fa fa-times-circle hidden"
                data-testid="clear-search"
              />
            </div>
            <div
              class="Filter"
            >
              <button
                class="Filter_button"
                type="button"
              >
                <i
                  class="Icon icon-filter-variant"
                />
                Filters
              </button>
              <div
                class="Filter_content"
              >
                <div
                  class="Filter_header"
                >
                  <div
                    class="Filter_title"
                  >
                    Filter by
                  </div>
                  <a
                    class="Filter_reset"
                  >
                    Reset filters
                  </a>
                </div>
                <hr />
                <div
                  class="Filter_lists"
                >
                  <div
                    class="FilterList"
                  >
                    <div
                      class="FilterList_name"
                    >
                      Role
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="system_guest"
                            name="system_guest"
                            type="checkbox"
                          />
                          Guest
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="channel_user"
                            name="channel_user"
                            type="checkbox"
                          />
                          Member
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="channel_admin"
                            name="channel_admin"
                            type="checkbox"
                          />
                          Channel Admin
                        </label>
                      </div>
                    </div>
                    <div
                      class="FilterList_item"
                    >
                      <div
                        class="FilterList_checkbox"
                      >
                        <label>
                          <input
                            id="system_admin"
                            name="system_admin"
                            type="checkbox"
                          />
                          System Admin
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="Filter_apply style--none btn btn-primary"
                  disabled=""
                  type="button"
                >
                  Apply
                </button>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_header"
          >
            <div
              class="DataGrid_cell"
              style="flex-grow: 3;"
            >
              Name
            </div>
            <div
              class="DataGrid_cell"
            />
            <div
              class="DataGrid_cell"
            />
          </div>
          <div
            class="DataGrid_rows"
            style="min-height: 0px;"
          >
            <div
              class="DataGrid_loading"
            >
              <span
                class="LoadingSpinner"
                id="loadingSpinner"
              >
                <span
                  class="fa fa-spinner fa-fw fa-pulse spinner"
                  title="Loading Icon"
                />
              </span>
              Loading
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="AdminPanel clearfix "
      id="channelMembers"
    >
      <div
        class="header"
      >
        <div>
          <h3>
            Members
          </h3>
          <div
            class="mt-2"
          >
            A list of users who are currently in the channel right now
          </div>
        </div>
        <div
          class="button"
        >
          <button
            class="style--none btn btn-primary"
            id="addChannelMembers"
          >
            Add Members
          </button>
        </div>
      </div>
      <div
        class="DataGrid"
      >
        <div
          class="DataGrid_search"
        >
          <div
            class="DataGrid_searchBar"
          >
            <span
              aria-hidden="true"
              class="DataGrid_searchIcon"
            >
              <i
                class="fa fa-search"
                title="Search Icon"
              />
            </span>
            <input
              data-testid="searchInput"
              placeholder="Search"
              type="text"
              value=""
            />
            <i
              class="DataGrid_clearButton fa fa-times-circle hidden"
              data-testid="clear-search"
            />
          </div>
          <div
            class="Filter"
          >
            <button
              class="Filter_button"
              type="button"
            >
              <i
                class="Icon icon-filter-variant"
              />
              Filters
            </button>
            <div
              class="Filter_content"
            >
              <div
                class="Filter_header"
              >
                <div
                  class="Filter_title"
                >
                  Filter by
                </div>
                <a
                  class="Filter_reset"
                >
                  Reset filters
                </a>
              </div>
              <hr />
              <div
                class="Filter_lists"
              >
                <div
                  class="FilterList"
                >
                  <div
                    class="FilterList_name"
                  >
                    Role
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="system_guest"
                          name="system_guest"
                          type="checkbox"
                        />
                        Guest
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="channel_user"
                          name="channel_user"
                          type="checkbox"
                        />
                        Member
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="channel_admin"
                          name="channel_admin"
                          type="checkbox"
                        />
                        Channel Admin
                      </label>
                    </div>
                  </div>
                  <div
                    class="FilterList_item"
                  >
                    <div
                      class="FilterList_checkbox"
                    >
                      <label>
                        <input
                          id="system_admin"
                          name="system_admin"
                          type="checkbox"
                        />
                        System Admin
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="Filter_apply style--none btn btn-primary"
                disabled=""
                type="button"
              >
                Apply
              </button>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_header"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 3;"
          >
            Name
          </div>
          <div
            class="DataGrid_cell"
          />
          <div
            class="DataGrid_cell"
          />
        </div>
        <div
          class="DataGrid_rows"
          style="min-height: 0px;"
        >
          <div
            class="DataGrid_loading"
          >
            <span
              class="LoadingSpinner"
              id="loadingSpinner"
            >
              <span
                class="fa fa-spinner fa-fw fa-pulse spinner"
                title="Loading Icon"
              />
            </span>
            Loading
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
